    zeroes from the input if --assume-binary is used.  [rG2a13f7f9dc]

  * gpgsm: Non-armored detached signature are now created without
    using indefinite form length octets.  This improves compatibility
    with some PDF signature verification software.  [rG8996b0b655]

  * dirmngr: The LDAP modifyTimestamp is now returned by some
    keyserver commands.  [rG56d309133f]

  * gpg: Make list-options "show-sig-subpackets" work again.
    Fixes regression in 2.4.0.  [rG5a223303d7]



Noteworthy changes in version 2.4.0 (2022-12-16)
------------------------------------------------

  * gpg: New command --quick-update-pref.  [rGd40d23b233]

  * gpg: New list-options show-pref and show-pref-verbose.
    [rG811cfa34cb]

  * gpg: New option --list-filter to restrict key listings like
      gpg -k --list-filter 'select=revoked-f && sub/algostr=ed25519'
    [rG1324dc3490]

  * gpg: New --export-filter export-revocs.  [rGc985b52e71]

  * gpg: Also import stray revocation certificates.  [rG7aaedfb107]

  * gpg: Add a notation to encryption subkeys in de-vs mode.  [T6279]

  * gpg: Improve signature verification speed by a factor of more than
    four.  Double detached signing speed.  [T5826]

  * gpg: Allow only OCB for AEAD encryption.  [rG5a2cef801d]

  * gpg: Fix trusted introducer for mbox only user-ids.  [T6238]

  * gpg: Report an error via status-fd for receiving a key from the
    agent.  [T5151]

  * gpg: Make --require-compliance work without the --status-fd
    option.  [rG2aacd843ad]

  * gpg: Fix verification of cleartext signatures with overlong lines.
    [T6272]

  * agent: Fix import of protected OpenPGP v5 keys.  [T6294]

  * gpgsm: Change the default cipher algorithm from AES128 to AES256.
    Also announce support for this in signatures.  [rG2d8ac55d26]

  * gpgsm: Always use the chain validation model if the root-CA
    requests this.  [rG7fa1d3cc82]

  * gpgsm: Print OCSP revocation date and reason in cert listings.
    [rGb6abaed2b5]
